fix: update draw.io CLI installation method to use deb package
- Replace npm-based installation with direct deb package download (v24.7.5)
- Add missing system dependencies (libasound2, libgbm1) for xvfb-run
- Improves build reliability and reduces installation overhead

--- a/.github/workflows/drawio-export.yml
+++ b/.github/workflows/drawio-export.yml
@@ -17,8 +17,9 @@ jobs:
       - name: Install draw.io CLI
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb
-          npm install -g @drawio/drawio-desktop
+          sudo apt-get install -y xvfb libasound2 libgbm1
+          wget -q https://github.com/jgraph/drawio-desktop/releases/download/v24.7.5/drawio-amd64-24.7.5.deb
+          sudo apt-get install -y ./drawio-amd64-24.7.5.deb
 
       - name: Export draw.io to PNG
         run: |
